--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,4 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = com.example
-	archives_base_name = fabric-example-mod
-
-# Dependencies
-	fabric_version=0.47.8+1.18.2
+	archives_base_name = tab-tps
